# simulation

./: .catkin_lint  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yaml
controllers/robot_controller/: robot_controller.py
launch/: webots.launch  webots_launcher.py
lib/sensors/include/sensors/: InertialUnit.hpp  MultiSenseS21.hpp  WheelOdom.hpp  accelerometer.hpp  gps.hpp  gyro.hpp  inertialUnit.hpp  lidar.hpp  wheelOdom.hpp  wheelOdometry.hpp
lib/sensors/src/: Accelerometer.cpp  GPS.cpp  Gyro.cpp  InertialUnit.cpp  Lidar.cpp  MultiSenseS21.cpp  WheelOdom.cpp  accelerometer.cpp  gps.cpp  gyro.cpp  inertialUnit.cpp  lidar.cpp  wheelOdom.cpp  wheelOdometry.cpp
lib/steering/include/: diffSteering.hpp
lib/steering/include/steering/: DiffSteering.hpp  diffSteering.hpp
lib/steering/src/: DiffSteering.cpp  diffSteering.cpp
lib/utils/include/utils/: GroundTruthPose.hpp  KeyboardController.hpp
lib/utils/src/: GroundTruthPose.cpp  KeyboardController.cpp
protos/: .Gritter.cache  .StreetSmart.cache  Gritter.proto  StreetSmart.proto
rviz/: urdf.rviz
src/: full_controller.cpp  full_controller_keyboard.cpp
urdf/: robot.urdf
worlds/: .world.wbproj  4-way-junction_pedestrian.wbt  4-way.wbt  config.ini  curved_path.wbt  curved_path_ice.wbt  curved_path_obstacles.wbt  curvedpath.wbt  demo1.wbt  meadows.wbt  meadows_part.wbt  meadows_with_pedestrian.wbt  o_grid.py  rectangle.wbt  single_lane_meadows.wbt  square.wbt  straight_line.wbt  straight_line_ice.wbt  straight_line_pedestrian.wbt  straightline.wbt  triangle.wbt  world.wbt
