<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Simulation package</description>
  <maintainer email="siliconlad@protonmail.com">Angus Stewart</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_export_depend>rospy</build_export_depend>

</package>
